welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:28: error: type mismatch;
 found   : Unit
 required: Int
    compteur = compteur = 1
                        ^